--- a/AssessCARProject/pom.xml
+++ b/AssessCARProject/pom.xml
@@ -14,8 +14,24 @@
   <name>AssessCARProject</name>
   <description>AssessCARProject</description>
   <properties>
+    <co.ke.telkom.wso2assessmentproject.resource_._PostsEndpoint>capp/EnterpriseServiceBus</co.ke.telkom.wso2assessmentproject.resource_._PostsEndpoint>
+    <co.ke.telkom.AssessESBProject.api_._PostInformation>capp/EnterpriseServiceBus</co.ke.telkom.AssessESBProject.api_._PostInformation>
     <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,lib/registry/handlers=jar,service/rule=aar,lib/registry/filter=jar,synapse/message-store=xml,event/stream=json,service/meta=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,synapse/api=xml,wso2/gadget=dar,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
   </properties>
+  <dependencies>
+    <dependency>
+      <groupId>co.ke.telkom.wso2assessmentproject.resource</groupId>
+      <artifactId>PostsEndpoint</artifactId>
+      <version>1.0.0</version>
+      <type>zip</type>
+    </dependency>
+    <dependency>
+      <groupId>co.ke.telkom.AssessESBProject.api</groupId>
+      <artifactId>PostInformation</artifactId>
+      <version>1.0.0</version>
+      <type>xml</type>
+    </dependency>
+  </dependencies>
   <repositories>
     <repository>
       <releases>
